add specifications to typeorm and add documentation
