# src/routes/specifications.routes.ts
@@ -1,18 +1,9 @@
 import { Router } from "express";
-import { SpecificationsRepository } from "../modules/cars/repositories/typeorm/SpecificationsRepository";
-import createCategoryController from "../modules/cars/useCases/createSpecification";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 const specificationsRoutes = Router();
-const specificationsRepository = new SpecificationsRepository();
+const createSpecificationController = new CreateSpecificationController();
 
-specificationsRoutes.post("/", (request, response) => {
-  return createCategoryController().handle(request, response);
-});
-
-specificationsRoutes.get("/", (request, response) => {
-  const allSpecifications = specificationsRepository.list();
-
-  return response.json(allSpecifications);
-});
+specificationsRoutes.post("/", createSpecificationController.handle);
 
 export { specificationsRoutes };
